# design_of_experiments

./: .gitignore  BUILD_PROMPT.md  CHANGELOG.md  LICENSE  MANIFEST.in  PLAN.md  README.md  add_multi_opt.py  build_prompt.md  doe.py  doe_helper_book.html  generate_book_pdf.py  generate_new_plots.py  generate_new_use_cases.py  generate_use_cases_117_146.py  generate_use_cases_147_198.py  generate_use_cases_199_250.py  generate_use_cases_251_300.py  generate_use_cases_57_86.py  generate_use_cases_87_116.py  generate_website_pages.py  pyproject.toml  requirements.txt  run.sh  run_sysbench.sh
.github/workflows/: ci.yml  pages.yml
docs/: doe_fundamentals.md
docs/book/: doe_guide.aux  doe_guide.out  doe_guide.tex  doe_guide.toc  user_guide.aux  user_guide.out  user_guide.tex  user_guide.toc
doe/: __init__.py  adaptive.py  all.txt  analysis.py  cli.py  codegen.py  config.py  design.py  knee.py  models.py  optimize.py  report.py  rsm.py
doe/templates/: runner_py.j2  runner_sh.j2
examples/: example_config.json  example_test_script.sh  reactor_config.json  reactor_sim.sh  run_sysbench.sh  sysbench_config.json  sysbench_test.sh
numa_crossnode/: bench  bench.c  bench.sh  bench_lmbench.sh  config.json  config_latency.json  config_read_bandwidth.json  config_write_bandwidth.json  run.sh
numa_experiment/: characterization_config.txt  numa_bench..txt  numa_bench.sh  numa_xfer.txt  optimization_config.txt  run_all_phases.sh  run_all_phases.txt  run_characterization.sh  run_characterization.txt  run_optimization.sh  run_optimization.txt  run_screening.sh  run_screening.txt  screening_config.txt  sim..txt  sim.sh
numa_experiment/results/: screening_report.html
results/: design_matrix.json  report.html  run_1.json  run_2.json  run_3.json  run_4.json  run_5.json  run_6.json  run_7.json  run_8.json
templates/: runner_py.j2  runner_sh.j2
tests/: test_doe.py
thread_saturation/: bench.sh  config.json  run.sh
training/: exercises.md  generate_slides.py  teaching_notes.md
use_cases/: 01_reactor_optimization.md
website/: CNAME  ai-config-prompt.txt  ai-prompts.html  ai-testscript-prompt.txt  book.html  guide.html  howto.html  index.html  quickstart.html  reference.html
(+6831 files in other folders)
