[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "design-of-experiments"
version = "0.1.0"
description = "A Design of Experiments (DOE) helper tool"
requires-python = ">=3.10"
dependencies = [
    "pyDOE3>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "Jinja2>=3.1.0",
]

[project.scripts]
doe = "doe:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["doe*"]
