[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doehelper"
version = "0.1.0"
description = "A Design of Experiments (DOE) helper tool"
readme = "README.md"
authors = [{name = "Martin J. Gallagher"}]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = [
    "doe",
    "doehelper",
    "experiment",
    "factorial",
    "statistics",
    "anova",
    "response-surface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyDOE3>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "Jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://doehelper.com"
Documentation = "https://doehelper.com"
Repository = "https://github.com/MartinGallagher-code/design_of_experiments"
"Bug Tracker" = "https://github.com/MartinGallagher-code/design_of_experiments/issues"

[project.scripts]
doe = "doe.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["doe*"]

[tool.setuptools.package-data]
doe = ["templates/*.j2", "use_cases/*/config.json", "use_cases/*/sim.sh", "use_cases/*/README.md"]
